<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#FFEDC3"
    android:padding="4dp"
    >

    <TextView
        android:id="@+id/calculateYourText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto"
        android:text="@string/calculate_your"
        android:textColor="#973D01"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#973D01"
        android:fontFamily="@font/roboto"
        android:padding="8dp"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/inMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/in_minutes"
        android:textColor="#973D01"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/lightGrey"
        android:fontFamily="@font/roboto"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textSize="22sp"
        app:cornerRadius="25dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/selected_date"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/lightGrey"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvSelectedDate"
        android:layout_marginTop="10dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="22sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/your_age_in_minutes"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/lightGrey"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:layout_marginTop="18dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        />



</LinearLayout>